[project]
name = "darabonba_base_python"
version = "0.0.1"
description = "darabonba_base_python"
authors = [
    {name = "toolsetlink",email = "toolsetlink@163.com"}
]
homepage = "https://github.com/toolsetlink/darabonba-base-python"
repository = "https://github.com/toolsetlink/darabonba-base-python"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
